crates/jarl-core/src/lints/base/string_boundary/snapshots/jarl_core__lints__base__string_boundary__tests__no_fix_with_comments.snap
---
source: crates/jarl-core/src/lints/base/string_boundary/mod.rs
expression: "get_fixed_text(vec![\"# leading comment\\nsubstr(x, 1, 2) == 'ab'\",\n\"substr(x, \\n # a comment \\n1, 2) == 'ab'\",\n\"substr(x, 1, 2) == 'ab' # trailing comment\",], \"string_boundary\", None)"
---
OLD:
====
# leading comment
substr(x, 1, 2) == 'ab'
NEW:
====
# leading comment
startsWith(x, 'ab')

OLD:
====
substr(x, 
 # a comment 
1, 2) == 'ab'
NEW:
====
substr(x, 
 # a comment 
1, 2) == 'ab'

OLD:
====
substr(x, 1, 2) == 'ab' # trailing comment
NEW:
====
startsWith(x, 'ab') # trailing comment
